Fix margin and gap of task buttons

--- a/src/ui/style.css
+++ b/src/ui/style.css
@@ -176,8 +176,7 @@ input {
 .buttons {
   display: flex;
   flex-direction: row;
-  gap: 325px;
-  margin-left: 5px;
+  gap: 330px;
 }
 
 .task-props,
